fix: header on safari

--- a/themes/genezio-theme/assets/scss/index.scss
+++ b/themes/genezio-theme/assets/scss/index.scss
@@ -2,7 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap");
 
 // TODO: remove this
-body {
+body,
+main {
   overflow-x: hidden;
 }
 
